# tool

./: .gitignore  README.md  pyproject.toml
skills/setup-ai-ssh-mcp-from-zip/: SKILL.md
src/ai_ssh_mcp/: __init__.py  config.py  credentials.py  security.py  server.py  ssh_client.py  store.py
tests/: test_config_credentials.py  test_download_paths.py  test_interactive_tool.py  test_security.py  test_shell_commands.py  test_ssh_output_parser.py  test_store_and_server.py
